force-app/main/default/objects/Case/fields/DaScoopComposer__Origin__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Origin__c</fullName>
    <label>Origin</label>
    <type>Email</type>
</CustomField>