force-app/main/default/objects/Case/fields/iTalentDev__Translation__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Translation__c</fullName>
    <formula>HYPERLINK(&apos;/apex/iTalentDev__SLCAlldataTranslationVf?iTalentDev__Case_Id__c=&apos; &amp; Id&amp;&apos;&amp;type=case&apos;, &apos;All Translated Content&apos; , &apos;blank&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Translation</label>
    <type>Text</type>
</CustomField>